--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -24,8 +24,12 @@
     "subtitle": "डेवलपर्स के लिए आवश्यक टूलबॉक्स"
   },
   "meta": {
-    "title": "आईटी टूल्स कलेक्शन - डेवलपर्स के लिए आवश्यक टूलबॉक्स",
-    "description": "डेवलपर्स के लिए डिज़ाइन किया गया ऑनलाइन टूल्स कलेक्शन, जिसमें JSON फॉर्मेटिंग, टेक्स्ट प्रोसेसिंग, एन्क्रिप्शन/डिक्रिप्शन और अन्य उपयोगी टूल्स शामिल हैं"
+    "site": {
+      "title": "आईटी टूल्स कलेक्शन - डेवलपर्स के लिए आवश्यक टूलबॉक्स",
+      "name": "आईटी टूल्स कलेक्शन",
+      "description": "डेवलपर्स के लिए डिज़ाइन किया गया ऑनलाइन टूल्स कलेक्शन, जिसमें JSON फॉर्मेटिंग, टेक्स्ट प्रोसेसिंग, एन्क्रिप्शन/डिक्रिप्शन और अन्य उपयोगी टूल्स शामिल हैं",
+      "keywords": "डेवलपर टूल्स,ऑनलाइन टूल्स,JSON टूल्स,डेटा रूपांतरण,टेक्स्ट प्रोसेसिंग,फ्रंटएंड टूल्स,टूलबॉक्स"
+    }
   },
   "home": {
     "tools_total": "कुल उपकरण",
@@ -71,7 +75,12 @@
       "input_title": "JSON इनपुट",
       "output_title": "आउटपुट परिणाम",
       "output_desc": "फॉर्मेटेड JSON डेटा",
-      "output_placeholder": "फॉर्मेटेड JSON यहां प्रदर्शित होगा..."
+      "output_placeholder": "फॉर्मेटेड JSON यहां प्रदर्शित होगा...",
+      "meta": {
+        "title": "JSON फॉर्मेटर टूल",
+        "description": "ऑनलाइन JSON फॉर्मेटिंग, कम्प्रेशन और वैलिडेशन टूल। JSON ब्यूटिफिकेशन, कम्प्रेशन और सिंटैक्स वैलिडेशन का समर्थन करके डेवलपमेंट दक्षता बढ़ाता है।",
+        "keywords": "JSON फॉर्मेटर,JSON ब्यूटिफायर,JSON मिनिफाई,JSON वैलिडेटर,ऑनलाइन टूल"
+      }
     },
     "json-to-csv": {
       "name": "JSON से CSV",
@@ -92,7 +101,12 @@
       "usage_nested_flatten": "• नेस्टेड ऑब्जेक्ट्स को फ्लैटन किया जाएगा:",
       "usage_nested_examples": "user.name, user.address.city",
       "usage_array_stringify": "• एरे वैल्यूज को JSON स्ट्रिंग्स में परिवर्तित किया जाएगा",
-      "usage_csv_escape": "• CSV विशेष वर्णों की एस्केपिंग को स्वचालित रूप से संभालता है"
+      "usage_csv_escape": "• CSV विशेष वर्णों की एस्केपिंग को स्वचालित रूप से संभालता है",
+      "meta": {
+        "title": "JSON से CSV कनवर्टर टूल",
+        "description": "JSON डेटा को तुरंत CSV प्रारूप में परिवर्तित करें। जटिल नेस्टेड ऑब्जेक्ट प्रोसेसिंग का समर्थन करता है और सुविधाजनक डेटा प्रारूप रूपांतरण कार्यक्षमता प्रदान करता है।",
+        "keywords": "JSON से CSV,डेटा रूपांतरण,JSON प्रोसेसिंग,CSV एक्सपोर्ट,ऑनलाइन टूल"
+      }
     },
     "json-to-yaml": {
       "name": "JSON से YAML",
@@ -104,7 +118,12 @@
       "input_desc": "परिवर्तित करने के लिए JSON डेटा दर्ज करें",
       "output_title": "YAML आउटपुट",
       "output_desc": "परिवर्तित YAML डेटा",
-      "output_placeholder": "परिवर्तित YAML यहां प्रदर्शित होगा..."
+      "output_placeholder": "परिवर्तित YAML यहां प्रदर्शित होगा...",
+      "meta": {
+        "title": "JSON से YAML कनवर्टर टूल",
+        "description": "JSON डेटा को तुरंत YAML प्रारूप में परिवर्तित करें। फॉर्मेटेड आउटपुट का समर्थन करता है और सुविधाजनक कॉन्फ़िगरेशन फाइल रूपांतरण कार्यक्षमता प्रदान करता है।",
+        "keywords": "JSON से YAML,डेटा रूपांतरण,JSON प्रोसेसिंग,YAML प्रारूप,कॉन्फ़िग रूपांतरण,ऑनलाइन टूल"
+      }
     }
   }
 }
