--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -24,8 +24,12 @@
     "subtitle": "开发者必备工具箱"
   },
   "meta": {
-    "title": "IT工具集合 - 开发者必备工具箱",
-    "description": "专为开发者打造的在线工具集合，包含JSON格式化、文本处理、加密解密等实用工具"
+    "site": {
+      "title": "IT工具集合 - 开发者必备工具箱",
+      "name": "IT工具集合",
+      "description": "专为开发者打造的在线工具集合，包含JSON格式化、文本处理、加密解密等实用工具",
+      "keywords": "开发者工具,在线工具,JSON工具,数据转换,文本处理,前端工具,工具箱"
+    }
   },
   "home": {
     "tools_total": "工具总数",
@@ -71,7 +75,12 @@
       "input_title": "输入 JSON",
       "output_title": "输出结果",
       "output_desc": "格式化后的 JSON 数据",
-      "output_placeholder": "格式化后的 JSON 将显示在这里..."
+      "output_placeholder": "格式化后的 JSON 将显示在这里...",
+      "meta": {
+        "title": "JSON格式化工具",
+        "description": "在线JSON格式化、压缩和验证工具。支持JSON美化、压缩和语法验证，提升开发效率。",
+        "keywords": "JSON格式化,JSON美化,JSON压缩,JSON验证,在线工具"
+      }
     },
     "json-to-csv": {
       "name": "JSON转CSV",
@@ -92,7 +101,12 @@
       "usage_nested_flatten": "• 嵌套对象会被扁平化：",
       "usage_nested_examples": "user.name、user.address.city",
       "usage_array_stringify": "• 数组值会被转换为 JSON 字符串",
-      "usage_csv_escape": "• 自动处理 CSV 特殊字符的转义"
+      "usage_csv_escape": "• 自动处理 CSV 特殊字符的转义",
+      "meta": {
+        "title": "JSON转CSV工具",
+        "description": "将JSON数据快速转换为CSV格式。支持复杂嵌套对象处理，提供便捷的数据格式转换功能。",
+        "keywords": "JSON转CSV,数据转换,JSON处理,CSV导出,在线工具"
+      }
     },
     "json-to-yaml": {
       "name": "JSON转YAML",
@@ -104,7 +118,12 @@
       "input_desc": "输入要转换的 JSON 数据",
       "output_title": "输出 YAML",
       "output_desc": "转换后的 YAML 数据",
-      "output_placeholder": "转换后的 YAML 将显示在这里..."
+      "output_placeholder": "转换后的 YAML 将显示在这里...",
+      "meta": {
+        "title": "JSON转YAML工具",
+        "description": "将JSON数据快速转换为YAML格式。支持格式化输出，提供便捷的配置文件转换功能。",
+        "keywords": "JSON转YAML,数据转换,JSON处理,YAML格式,配置转换,在线工具"
+      }
     }
   }
 }
