optimize: 标题改短，配合seo优化

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -25,7 +25,7 @@
   },
   "meta": {
     "site": {
-      "title": "IT Tools Collection - Essential Toolbox for Developers",
+      "title": "IT Tools Collection - Developer Toolbox",
       "name": "IT Tools Collection",
       "description": "Online tools collection designed for developers, including JSON formatting, text processing, encryption/decryption and other practical tools",
       "keywords": "developer tools,online tools,JSON tools,data conversion,text processing,frontend tools,toolbox"
