--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -25,7 +25,7 @@
   },
   "meta": {
     "site": {
-      "title": "आईटी टूल्स कलेक्शन - डेवलपर्स के लिए आवश्यक टूलबॉक्स",
+      "title": "आईटी टूल्स कलेक्शन - डेवलपर टूलबॉक्स",
       "name": "आईटी टूल्स कलेक्शन",
       "description": "डेवलपर्स के लिए डिज़ाइन किया गया ऑनलाइन टूल्स कलेक्शन, जिसमें JSON फॉर्मेटिंग, टेक्स्ट प्रोसेसिंग, एन्क्रिप्शन/डिक्रिप्शन और अन्य उपयोगी टूल्स शामिल हैं",
       "keywords": "डेवलपर टूल्स,ऑनलाइन टूल्स,JSON टूल्स,डेटा रूपांतरण,टेक्स्ट प्रोसेसिंग,फ्रंटएंड टूल्स,टूलबॉक्स"
