--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -25,7 +25,7 @@
   },
   "meta": {
     "site": {
-      "title": "IT工具集合 - 开发者必备工具箱",
+      "title": "IT工具集合 - 开发者工具箱",
       "name": "IT工具集合",
       "description": "专为开发者打造的在线工具集合，包含JSON格式化、文本处理、加密解密等实用工具",
       "keywords": "开发者工具,在线工具,JSON工具,数据转换,文本处理,前端工具,工具箱"
